Ingress/ejemplo-ingress01.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: v1.k8s.local
    http:
      paths:
      - path:
        backend:
          serviceName: nginx
          servicePort: 80
